--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /frontend/node_modules
 /backend/node_modules
 backend/functions/node_modules/
+/node_modules
 
 # Build outputs
 /frontend/build
@@ -30,3 +31,9 @@ storage-debug.log
 pglite-debug.log
 
 firestore-debug.log
+
+# Firebase
+firebase-debug 2.log
+
+# Editor-specific files
+*.orig
