--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "start:prod": "npm run build --workspace=frontend && npm run deploy --workspace=functions"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "emoji-mart": "^5.6.0",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.4.0",
-    "firebase-functions-test": "^3.4.1"
+    "firebase-functions-test": "^3.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "concurrently": "^9.2.0"
