--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@vitejs/plugin-react": "^5.0.1",
     "firebase": "^10.12.2",
     "react": "^18.3.1",
@@ -20,15 +22,15 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
-    "@eslint/js": "^9.4.0",
+  "@eslint/js": "^9.34.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+  "eslint": "^9.34.0",
+  "eslint-plugin-react-hooks": "^5.2.0",
+  "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.4.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
