--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Build frontend
         run: npm run build --workspace=frontend
 
+      - name: List files in the root directory
+        run: ls -la
+
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
